trunk/Archive2/28/0532a82fad1670/output
main.cpp: In function 'int main()':
main.cpp:3:5: error: static assertion failed: !
     static_assert(30.0+0.3 == 3.0*10.1, "!");    
     ^
