trunk/Archive2/28/0532a82fad1670/main.cpp
int main()
{
    static_assert(30.0+0.3 == 3.0*10.1, "!");    
}
